# utag

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  build.sh  cmake_install.cmake  utag.cbp
3dparty/: CMakeLists.txt
app/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
app/resource/: CMakeLists.txt
app/resource/utag/build-test2-Desktop_Qt_5_15_0_MinGW_32_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
app/resource/utag/build-test2-Desktop_Qt_5_15_0_MinGW_32_bit-Debug/debug/: moc_mainwindow.cpp
app/resource/utag/build-test2-Desktop_Qt_5_15_1_MinGW_32_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_dialog.h  ui_mainwindow.h
app/resource/utag/build-test2-Desktop_Qt_5_15_1_MinGW_32_bit-Debug/debug/: moc_dialog.cpp  moc_mainwindow.cpp
app/resource/utag/test2/: dialog.cpp  dialog.h  dialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
app/resource/utag/test3/: CMakeLists.txt
app/resource/utag/untitled1/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
app/src/: CMakeLists.txt  Makefile  cmake_install.cmake  dialog.cpp  dialog.h  dialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
app/src/src_autogen/: moc_predefs.h
app/src/src_autogen/EWIEGA46WW/: moc_dialog.cpp  moc_dialog.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d
app/src/src_autogen/include/: ui_mainwindow.h
